# SLS

./: .gitignore  BASKET_LIVE.ipynb  BASKET_LIVE.py  BTC_LIVE.ipynb  BTC_LIVE.py  ETH_LIVE.ipynb  ETH_LIVE.py  README.md  arbitrum-btc-usd-sls-binance-data-1h.ipynb  arbitrum-btc-usd-sls-binance-data-1h.py  backtest_WETH-USDC.ipynb  backtest_WETH-USDC.py  backtest_WETH-USDC_mikko.ipynb  backtest_WMATIC-USDC.ipynb  backtest_WMATIC-USDC.py  backtest_arbitrum_WBTC-USDC.ipynb  backtest_arbitrum_WBTC-USDC.py  backtest_arbitrum_WETH-USDC.ipynb  backtest_arbitrum_WETH-USDC.py  bollinger_band_example_defi_strategy.ipynb  data_fetching.py  fetch_ohlc.py  get_ohlc.py  get_pairs_based_on_bps.py  main.ipynb  main.py  optimisations.ipynb  optimisations.py  package.json  pyproject.toml  pyrightconfig.json  rsi_debugging.ipynb  rsi_debugging.py  sls.parquet  test.py  ts.parquet  ts_backtester.py  uniswap-v3-WETH-USDC-h4.parquet
data/: uniswap-v3-WETH-USDC-h4.parquet  uniswap_v3-arbitrum-WBTC-USDC-4h.parquet  uniswap_v3-arbitrum-WETH-USDC-4h.parquet  uniswap_v3-ethereum-WETH-USDC-15m.parquet  uniswap_v3-ethereum-WETH-USDC-1d.parquet  uniswap_v3-ethereum-WETH-USDC-1h.parquet  uniswap_v3-ethereum-WETH-USDC-4h.parquet  uniswap_v3-ethereum-WMATIC-USDC-1d.parquet  uniswap_v3-ethereum-WMATIC-USDC-4h.parquet  uniswap_v3-polygon-WETH-USDC-15m.parquet  uniswap_v3-polygon-WETH-USDC-1d.parquet  uniswap_v3-polygon-WETH-USDC-1h.parquet  uniswap_v3-polygon-WETH-USDC-4h.parquet  uniswap_v3-polygon-WMATIC-USDC-15m.parquet  uniswap_v3-polygon-WMATIC-USDC-1d.parquet  (+1 more)
legacy/: backtest_arbitrum_WBTC-USDC.py  (+1 more)
(+4 files in other folders)
